// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RatingStarGroup /> should render correctly 1`] = `
<div
  className="RatingStarGroup"
  data-testid="RatingStarGroup"
>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={0}
      size={50}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-1}
      size={50}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-2}
      size={50}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-3}
      size={50}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-4}
      size={50}
    />
  </div>
</div>
`;

exports[`<RatingStarGroup /> should render correctly with empty rating 1`] = `
<div
  className="RatingStarGroup"
  data-testid="RatingStarGroup"
>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={0}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-1}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-2}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-3}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-4}
      size={20}
    />
  </div>
</div>
`;

exports[`<RatingStarGroup /> should render correctly with full rating 1`] = `
<div
  className="RatingStarGroup"
  data-testid="RatingStarGroup"
>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={5}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={4}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={3}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={2}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={1}
      size={20}
    />
  </div>
</div>
`;

exports[`<RatingStarGroup /> should render correctly with half rating 1`] = `
<div
  className="RatingStarGroup"
  data-testid="RatingStarGroup"
>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={2.5}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={1.5}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={0.5}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-0.5}
      size={20}
    />
  </div>
  <div
    className="mr-1"
    data-testid="RatingStarGroup_RatingStar"
    onClick={[Function]}
  >
    <RatingStar
      color="orange"
      fill={-1.5}
      size={20}
    />
  </div>
</div>
`;
